--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -3,3 +3,13 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Uncomment the following lines to enable the Corne RGB Underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+
+# Uncomment the following line to enable the Corne OLED Display
+CONFIG_ZMK_DISPLAY=y
+
+#Nombre de la placa, menos de 16 caracteres
+CONFIG_ZMK_KEYBOARD_NAME="Muela Split KB"
